se agrego la funte para el logo y posteriormente de cambio l fuente de -apptastico-

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container-body">
     <header class="header">
         <nav class="nav-bar">
-            <h2 class="brand">APPTASTIC</h2>
+            <h2 class="brand">Apptastico</h2>
             <ul class="options-list">
                 <li>
                     <a href="">HOME</a> </li>
