avance de styles en la segunda seccion del header

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                     <a href="">click for more options
                     </a>
                 </div>
-                <ul class="icons">
-                    <li><img src="img/icons/NIKE.png" alt=""></li>
-                    <li><img src="img/icons/EBAY.png" alt=""></li>
-                    <li><img src="img/icons/MACDONALS.png" alt=""></li>
-                    <li><img src="img/icons/ADIDAS.png " alt=""></li>
-                    <li><img src="img/icons/EA.png " alt=""></li>
-                </ul>
             </section>
+        </section>
+        <section class="nav-icons">
+            <ul class="icons">
+                <li><img src="img/icons/NIKE.png" alt=""></li>
+                <li><img src="img/icons/EBAY.png" alt=""></li>
+                <li><img src="img/icons/MACDONALS.png" alt=""></li>
+                <li><img src="img/icons/ADIDAS.png " alt=""></li>
+                <li><img src="img/icons/EA.png " alt=""></li>
+            </ul>
         </section>
     </header>
 
