--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h2 class="brand">Apptastico</h2>
             <ul class="options-list">
                 <li>
-                    <a href="">HOME</a> </li>
+                    <a href="">Home</a> </li>
                 <li>
-                    <a href="">ABOUT</a> </li>
+                    <a href="">About</a> </li>
                 <li>
-                    <a href="">MORE</a></li>
+                    <a href="">More</a></li>
                 <li>
-                    <a href="">CONTACT</a></li>
+                    <a href="">Contact</a></li>
             </ul>
         </nav>
         <section class="section-general">
@@ -31,7 +31,7 @@
             <section class="general-description">
                 <div class="description">
                     <h1>We design iOS apps</h1>
-                    <h2>Control every pixel to create customized y adaptive designs that look great on any screen. Take control of your codebase with plugins, testing, dev tools y build high quality apps.</h2>
+                    <h2>Control every pixel to create customized y adaptive designs that look great on any screen. </h2>
                     <h3>Control every pixel to create customized y adaptive designs that look great on any screen. Take control of your codebase with plugins, testing, dev tools y build high quality apps.</h3>
                 </div>
                 <div class="buttons">
@@ -47,7 +47,7 @@
                 <li><img src="img/icons/NIKE.png" alt=""></li>
                 <li><img src="img/icons/EBAY.png" alt=""></li>
                 <li><img src="img/icons/MACDONALS.png" alt=""></li>
-                <li><img src="img/icons/ADIDAS.png " alt=""></li>
+                <li><img class="adidas" src="img/icons/ADIDAS.png " alt=""></li>
                 <li><img src="img/icons/EA.png " alt=""></li>
             </ul>
         </section>
