--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="">Contact</a></li>
             </ul>
         </nav>
-        <section class="section-general">
+        <section class="section-description">
             <div class="img">
                 <img src="img/phone.png" alt="" class="img-phone">
             </div>
@@ -37,8 +37,7 @@
                 <div class="buttons">
                     <button class="button">Design iOS app </button>
                     <h2>or</h2>
-                    <a href="">click for more options
-                    </a>
+                    <a href="">click for more options</a>
                 </div>
             </section>
         </section>
@@ -52,20 +51,34 @@
             </ul>
         </section>
     </header>
+    <main class="main">
+        <section class="section-services">
+            <div class="card-services">
+                <img src=" " alt="">
+                <h2>Engaging interfaces</h2>
+                <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
+                <a href=" ">See More</a>
+            </div>
+            <div class="card-services">
+                <img src=" " alt="">
+                <h2>Original designs</h2>
+                <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
+                <a href=" ">See More</a>
+            </div>
+            <div class="card-services">
+                <img src=" " alt="">
+                <h2>Solid development</h2>
+                <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
+                <a href=" ">See More</a>
+            </div>
+        </section>
+        <section class="section-projects"></section>
+        <section class="section-blog"></section>
+    </main>
 
 
 
 
-
-
-
-
-
-
-
-
-
-    <main class="main"></main>
     <footer class="footer"></footer>
 </body>
 </html>
