aplicacion de styles a la section sevices

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
     <main class="main">
         <section class="section-services">
             <div class="card-services">
-                <img src=" " alt="">
+                <img src="img/icons/phone.png" alt="">
                 <h2>Engaging interfaces</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
                 <a href=" ">See More</a>
             </div>
             <div class="card-services">
-                <img src=" " alt="">
+                <img src="img/icons/quimic.png" alt="">
                 <h2>Original designs</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
                 <a href=" ">See More</a>
             </div>
             <div class="card-services">
-                <img src=" " alt="">
+                <img src="img/icons/tools.png" alt="">
                 <h2>Solid development</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
                 <a href=" ">See More</a>
