--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
                 <a href=" ">See More</a>
             </div>
         </section>
-        <section class="section-projects"></section>
+        <section class="section-projects">
+            <div class="select-project">
+                <img src=" " alt="">
+                <h2>Select projects</h2>
+            </div>
+            <div class="projects"></div>
+        </section>
         <section class="section-blog"></section>
     </main>
 
