--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>
                     <a href="">More</a></li>
                 <li>
-                    <a href="">Contact</a></li>
+                    <a href="">Contact</a></li> 
             </ul>
         </nav>
         <section class="section-description">
@@ -57,28 +57,45 @@
                 <img src="img/icons/phone.png" alt="">
                 <h2>Engaging interfaces</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
-                <a href=" ">See More</a>
+                <a href=" ">Read More</a>
             </div>
             <div class="card-services">
                 <img src="img/icons/quimic.png" alt="">
                 <h2>Original designs</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
-                <a href=" ">See More</a>
+                <a href=" ">Read More</a>
             </div>
             <div class="card-services">
                 <img src="img/icons/tools.png" alt="">
                 <h2>Solid development</h2>
                 <h3>Control every pixel to create customized y adaptive designs that look great on any screen.</h3>
-                <a href=" ">See More</a>
+                <a href=" ">Read More</a>
             </div>
         </section>
+
         <section class="section-projects">
             <div class="select-project">
-                <img src=" " alt="">
+                <img src="img/icons/images.png" alt="">
                 <h2>Select projects</h2>
             </div>
-            <div class="projects"></div>
+            <div class="projects">
+                <a href=" ">
+                    <img src="img/project/A.jpg" alt="">
+                </a>
+                <a href=" ">
+                    <img src="img/project/B.png" alt="">
+                </a>
+                <a href=" ">
+                    <img src="img/project/C.png" alt="">
+                </a>
+                <a href=" ">
+                    <img src="img/project/D.jpg" alt="">
+                </a>
+            </div>
         </section>
+
+
+
         <section class="section-blog"></section>
     </main>
 
