--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +10,24 @@
     <title>APPTASTICO</title>
 
 </head>
+
 <body class="container-body">
     <header class="header">
         <nav class="nav-bar">
             <h2 class="brand">Apptastico</h2>
             <ul class="options-list">
                 <li>
-                    <a href="">Home</a> </li>
+                    <a href="">Home</a>
+                </li>
                 <li>
-                    <a href="">About</a> </li>
+                    <a href="">About</a>
+                </li>
                 <li>
-                    <a href="">More</a></li>
+                    <a href="">More</a>
+                </li>
                 <li>
-                    <a href="">Contact</a></li> 
+                    <a href="">Contact</a>
+                </li>
             </ul>
         </nav>
         <section class="section-description">
@@ -32,7 +38,8 @@
                 <div class="description">
                     <h1>We design iOS apps</h1>
                     <h2>Control every pixel to create customized y adaptive designs that look great on any screen. </h2>
-                    <h3>Control every pixel to create customized y adaptive designs that look great on any screen. Take control of your codebase with plugins, testing, dev tools y build high quality apps.</h3>
+                    <h3>Control every pixel to create customized y adaptive designs that look great on any screen. Take
+                        control of your codebase with plugins, testing, dev tools y build high quality apps.</h3>
                 </div>
                 <div class="buttons">
                     <button class="button">Design iOS app </button>
@@ -93,10 +100,81 @@
                 </a>
             </div>
         </section>
+        
+        <section class="section-blog-twitter">
+            <div class="blog">
+                <section class="tittle-blog">
+                    <img src="img/icons/blog.png" alt="">
+                    <h2>FROM OUR BLOG</h2>
+                </section>
+                <section class="content-blog">
+                    <img src="img/project/E.png" alt="">
+                    <div class="content">
+                        <h3>Our work process reviewed</h3>
+                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum feugiat nisl ut dapibus mauris.
+                        <a href="">Read more...</a>
+                        <h5>01/01/13 - 10:21 AM</h5>
+                        </h4>
 
+                    </div>
+                </section>
+                <section class="content-blog">
+                    <img src="img/project/F.png" alt="">
+                    <div class="content">
+                        <h3>Who we are at Appcompany</h3>
+                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum feugiat nisl ut dapibus mauris.
+                        <a href="">Read more...</a>
+                        <h5>01/01/13 - 10:21 AM</h5>
+                        </h4>
 
-
-        <section class="section-blog"></section>
+                    </div>
+                    
+                </section>
+                <a href="">Older entries</a>
+            </div>
+            <div class="twitter">
+                <section class="tittle-twitter">
+                    <img src="img/icons/twitter.png" alt="">
+                    <h2>Our Twitter Feed</h2>
+                </section>
+                <section class="content-twitter">
+                    <h3>@Apptastico: 
+                        <h4>in 
+                            <a href=" ">pellentesque.com </a>
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            <a href=" ">#purus </a>
+                            a 
+                            <a href=" ">#blandit</a>
+                            .
+                            <h5>01/01/13 - 10:21 AM</h5>
+                        </h4>
+                    </h3>
+                    <h3>@Apptastico: 
+                        <h4>in 
+                            <a href=" ">pellentesque.com </a>
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            <a href=" ">#purus </a>
+                            a 
+                            <a href=" ">#blandit</a>
+                            .
+                            <h5>01/01/13 - 10:21 AM</h5>
+                        </h4>
+                    </h3>
+                    <h3>@Apptastico: 
+                        <h4>in 
+                            <a href=" ">pellentesque.com </a>
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            <a href=" ">#purus </a>
+                            a 
+                            <a href=" ">#blandit</a>
+                            .
+                            <h5>01/01/13 - 10:21 AM</h5>
+                        </h4>
+                    </h3>
+                    <a href=" ">Follow us on Twitter</a>
+                </section>
+            </div>
+        </section>
     </main>
 
 
@@ -104,4 +182,5 @@
 
     <footer class="footer"></footer>
 </body>
+
 </html>
