se aplicaron alguno estilos a la seccion de blog-twitter y se esta definiendo la margen que debe tener el main para que las secciones queden alineadas

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         control of your codebase with plugins, testing, dev tools y build high quality apps.</h3>
                 </div>
                 <div class="buttons">
-                    <button class="button">Design iOS app </button>
+                    <button class="button">Request a quote </button>
                     <h2>or</h2>
-                    <a href="">click for more options</a>
+                    <a href="">See our recent work</a>
                 </div>
             </section>
         </section>
@@ -100,35 +100,34 @@
                 </a>
             </div>
         </section>
-        
+
         <section class="section-blog-twitter">
             <div class="blog">
                 <section class="tittle-blog">
                     <img src="img/icons/blog.png" alt="">
-                    <h2>FROM OUR BLOG</h2>
+                    <h2>From our blog</h2>
                 </section>
                 <section class="content-blog">
                     <img src="img/project/E.png" alt="">
                     <div class="content">
                         <h3>Our work process reviewed</h3>
-                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum feugiat nisl ut dapibus mauris.
-                        <a href="">Read more...</a>
-                        <h5>01/01/13 - 10:21 AM</h5>
+                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum
+                            feugiat nisl ut dapibus mauris.
+                            <a href="">Read more...</a>
+                            <h5>01/01/13 - 10:21 AM</h5>
                         </h4>
-
                     </div>
                 </section>
                 <section class="content-blog">
                     <img src="img/project/F.png" alt="">
                     <div class="content">
                         <h3>Who we are at Appcompany</h3>
-                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum feugiat nisl ut dapibus mauris.
-                        <a href="">Read more...</a>
-                        <h5>01/01/13 - 10:21 AM</h5>
+                        <h4>Phasellus molestie manga non est bibendum non veneratir nisl tempor.Suspendisse dictum
+                            feugiat nisl ut dapibus mauris.
+                            <a href="">Read more...</a>
+                            <h5>01/01/13 - 10:21 AM</h5>
                         </h4>
-
                     </div>
-                    
                 </section>
                 <a href="">Older entries</a>
             </div>
@@ -138,34 +137,34 @@
                     <h2>Our Twitter Feed</h2>
                 </section>
                 <section class="content-twitter">
-                    <h3>@Apptastico: 
-                        <h4>in 
+                    <h3>@Apptastico:
+                        <h4>in
                             <a href=" ">pellentesque.com </a>
-                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas
                             <a href=" ">#purus </a>
-                            a 
+                            a
                             <a href=" ">#blandit</a>
                             .
                             <h5>01/01/13 - 10:21 AM</h5>
                         </h4>
                     </h3>
-                    <h3>@Apptastico: 
-                        <h4>in 
+                    <h3>@Apptastico:
+                        <h4>in
                             <a href=" ">pellentesque.com </a>
-                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas
                             <a href=" ">#purus </a>
-                            a 
+                            a
                             <a href=" ">#blandit</a>
                             .
                             <h5>01/01/13 - 10:21 AM</h5>
                         </h4>
                     </h3>
-                    <h3>@Apptastico: 
-                        <h4>in 
+                    <h3>@Apptastico:
+                        <h4>in
                             <a href=" ">pellentesque.com </a>
-                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas 
+                            faucibus vestibulum. Nulla at nulla justo, eget Duis aliquet egestas
                             <a href=" ">#purus </a>
-                            a 
+                            a
                             <a href=" ">#blandit</a>
                             .
                             <h5>01/01/13 - 10:21 AM</h5>
