se agregaron algunos styles al footer

--- a/index.html
+++ b/index.html
@@ -175,11 +175,25 @@
             </div>
         </section>
     </main>
-
-
-
-
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <section class="copyright">
+           <h2>©Erick Arias 2023</h2> 
+        </section>
+        <section class="red-social">
+            <a href="">
+                <img src="img/icons/fbk.png" alt="">
+            </a>
+            <a href=""> 
+                <img src="img/icons/twiiter-footer.png" alt="">
+            </a>
+            <a href="">
+                <img src="img/icons/in.png" alt="">
+            </a>
+            <a href="">
+                <img src=" " alt="">
+            </a>
+        </section>
+    </footer>
 </body>
 
 </html>
